# EducaChile-AI-Studio

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260428_4b7c3a0d2f91_add_project_generation_configs.py  20260428_7a1f2d8e9c31_add_job_current_step.py  20260428_d830e2a7c638_initial.py  20260428_ddb77358d774_add_job_progress_and_timestamps.py  20260428_e0c382f59d51_create_all_mvp_tables.py  20260428_e894de060c97_add_presentation_upload_statuses.py  20260502_9c1f0a2b3d4e_add_generation_pipeline_tables.py  20260502_a7b8c9d0e1f2_add_video_generation_settings.py
apps/api/app/: config.py  database.py  dev_seed.py  main.py  models.py
apps/api/app/modules/composer/: service.py
apps/api/app/modules/generation/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/modules/generation_config/: repository.py  router.py  schemas.py  service.py
apps/api/app/modules/jobs/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/modules/organizations/: models.py  repository.py  schemas.py
apps/api/app/modules/presentations/: rendering.py  (+2 more)
apps/api/app/utils/: crypto.py
apps/api/app/workers/: base_task.py  celery_app.py  db.py  tasks.py
apps/api/tests/: conftest.py  fakes.py  test_generation.py  test_generation_config.py  test_presentations.py  test_projects.py  test_provider_credentials.py  test_slides.py  test_storage.py  test_workers.py
(+49 files in other folders)
